--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@vueuse/core": "^12.5.0",
     "axios": "^1.7.9",
+    "dayjs": "^1.11.13",
     "dingtalk-jsapi": "^3.0.45",
     "element-plus": "^2.9.3",
     "pinia": "^2.3.1",
