--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "vconsole": "^3.15.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "xlsx-js-style": "^1.2.0"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^4.1.0",
